organized project directory

--- a/front-end/sign-up page/signuppage.html
+++ b/front-end/sign-up page/signuppage.html
@@ -39,7 +39,7 @@
         
 
         <div id="image">
-            <img src="signuppeople.png" width="100%">
+            <img src="../images/signuppeople.png" width="100%">
         </div>
     </body>
 </html>
