--- a/front-end/welcome page/welcome.html
+++ b/front-end/welcome page/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the Creative Patient Portal</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="welcome.css">
 </head>
 <body>
     <header>
