--- a/front-end/loginPage/HTML/login.html
+++ b/front-end/loginPage/HTML/login.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class = "usernameBox">
-                <label for="username"> Username </label>
+                <label for="username"> Email </label>
                 
                 <input type = "text" placeholder="Enter Username Here" name = "username" required>
 
