--- a/security.html
+++ b/security.html
@@ -48,6 +48,11 @@
             width: 100px;
             height: 100px;
             object-fit: cover;
+            border: 4px solid transparent;
+        }
+
+        #img1.active, #img2.active, #img3.active,  #img4.active,  #img5.active,  #img6.active,  #img7.active, #img8.active,  #img9.active,  #img10.active{
+            border-color:rgb(233, 93, 203);
         }
 
         #submit{
@@ -70,7 +75,7 @@
         
         <div id="entryinfo" >
 
-        <form action="/submit-page2" method="POST">
+        <form action="/submit" method="POST">
 
             <label for="pwd">Password:</label>
             <input type="text" id="pwd" name="pwd" size="30">
@@ -116,12 +121,24 @@
 
     
     <script>
+
+        let currentselect = null;
+
          function selectImage(img) {
              // Get the data-value attribute of the clicked image
              var value = img.getAttribute("data-value");
   
              // Set the value of the hidden input field with the ID "imgpwd"
              document.getElementById("imgpwd").value = value;
+
+             if(currentselect){
+                currentselect.classList.remove('active');
+             }
+
+             img.classList.add('active');
+
+             currentselect = img;
+
      }   
 
     </script>
