--- a/front-end/medicalHistory-Page/medicalHistory.html
+++ b/front-end/medicalHistory-Page/medicalHistory.html
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div class = "box02" id = "prescription" onclick="location.href='../HTML/home.html'"  style = "cursor: pointer;">
+            <div class = "box02" id = "prescription" onclick="location.href='../HTML/Prescriptions.html'"  style = "cursor: pointer;">
                 <h2> Prescription </h2>
                 <p> Click Here To View</p>
                 <br>
